Fix spacing and center content

--- a/style.css
+++ b/style.css
@@ -26,6 +26,8 @@ body {
 .header {
   background-color: #1f2937;
   color: #f9faf8;
+  padding: 0 128px;
+  padding-bottom: 64px;
 }
 
 #logo {
@@ -75,8 +77,11 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 3px solid #fff429;
+  /* border: 3px solid #fff429; */
   margin: 8px;
+  margin-bottom: 64px;
+  
+
 }
 
 img {
@@ -91,13 +96,15 @@ img {
   display: inline-block;
   text-align: center;
   width: 120px;
+  font-size: 12px;
 
 }
 
 .items {
   padding: 0;
   display: flex;
-  border:#1f2937 solid 10px;
+  gap: 32px;
+  /* border:#1f2937 solid 10px; */
   /* justify-content: space-between; */
 }
 
@@ -106,16 +113,21 @@ img {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 64px;
+  padding: 64px 312px;
 }
 
 #quote {
+  padding: 0 128px;
+  font-size: 36px;
+  width: 812px;
   font-style: italic;
+  font-weight: lighter;
+  color: #1F2937
 }
 
 #author {
   display: flex;
-  /* align-items: right; */
+  align-self: flex-end;
   font-weight: bold;
 }
 
@@ -124,22 +136,23 @@ img {
   border-radius: 5px;
   color: white;
 
-  margin: 24px 48px;
-  padding: 24px 24px;
+  margin: 72px 176px;
   display: flex;
+  padding: 48px 128px;
 }
 
 .sign {
   color: white;
   background-color: #3882f6;
-  border-radius: 8px;
+  border-radius: 4px;
   border: none;
-
+  padding: 6px 30px;
   cursor: pointer;
 }
 
 .call > .sign {
   border: 2px solid white;
+  align-self: flex-end;
 }
 
 /* Footer section */
